--- a/htm/home.htm
+++ b/htm/home.htm
@@ -61,7 +61,8 @@
 
   <!-- Container (Pricing Section) -->
   <div id="produtos" class="container-fluid text-center linear-grad-products slideanim">
-    <div class="row "><br><br>
+    <div class="row ">
+      <br><br>
       <h1 class="font-custom h1-custom">PRODUTOS</h1><br/>
       <div class="text-center">
         <h4 class="font-custom">Cabo USB Lightning para iPhone, iPad e iPod</h4>
@@ -370,14 +371,14 @@
       </div>
     </div>
   </div>
-
   <hr/>
 
   <!-- Container (sobre Section) -->
   <div id="sobre" class="container-fluid slideanim">
     <div class="row text-center">
 
-      <div class="col-sm-12" align="justify"><br><br>
+      <div class="col-sm-12" align="justify">
+        <br><br>
         <h2 class="font-custom h1-custom">SOBRE</h2><br/>
         <h4>100% BRASILEIRA, a <strong>tuning-phone&reg;</strong> &eacute; a mais nova loja de acess&oacute;rios para smartphones na internet. Todos os produtos s&atilde;o vendidos atrav&eacute;s da pr&oacute;pria loja, marketplaces e redes sociais pelos melhores pre&ccedil;os e com condi&ccedil;&otilde;es incr&iacute;veis de pagamento. Visite-nos tamb&eacute;m no Mercado Livre e Facebook!</h4>
       </div>
@@ -428,7 +429,7 @@
 
   <br/>
 
-  <div class="hidden-xs navbar navbar-default navbar-fixed-bottom linear-grad menus">
+  <nav class="hidden-xs navbar navbar-default navbar-fixed-bottom linear-grad menus">
     <div class="container">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar2">
@@ -439,7 +440,7 @@
         </button>
       </div>
       <div class="collapse navbar-collapse navbar-left font-custom item-custom" id="myNavbar2">
-        <ul class="hidden-xs nav navbar-nav"> 
+        <ul class="nav navbar-nav"> 
           <li><a href="#produtos">PRODUTOS</a></li>
           <li><a href="#sobre">SOBRE</a></li>
           <li><a href="#diferenciais">DIFERENCIAIS</a></li>
@@ -447,7 +448,7 @@
         </ul>
       </div>
     </div>
-  </div>
+  </nav>
 </div>
 
 <script>
