--- a/htm/rodape.htm
+++ b/htm/rodape.htm
@@ -137,16 +137,16 @@
      <span class="text-center FooterTitleTxt">Seguran&ccedil;a</span>
      <div class="container-fluid">
         <div class="col-sm-3 text-center">
-          <img width="120px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/seal_lets_encrypt_2.svg" alt="Let's Encrypt" title="Let's Encrypt">
+          <img width="70px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/seal_lets_encrypt_2.svg" alt="Let's Encrypt" title="Let's Encrypt">
         </div>
         <div class="col-sm-3 text-center">
-          <a href="#" onclick="window.open('https://www.sitelock.com/verify.php?site=tuning-phone.com.br','SiteLock','width=600,height=600,left=160,top=170');" ><img alt="SiteLock" title="SiteLock" src="//shield.sitelock.com/shield/tuning-phone.com.br" /></a>
+          <a href="#" onclick="window.open('https://www.sitelock.com/verify.php?site=tuning-phone.com.br','SiteLock','width=600,height=600,left=160,top=170');" ><img alt="SiteLock" title="SiteLock" height="70px" src="//shield.sitelock.com/shield/tuning-phone.com.br" /></a>
         </div>
         <div class="col-sm-3 text-center">
-          <a href="https://www.google.com/transparencyreport/safebrowsing/diagnostic/?hl=pt-BR#url=<StoreDomain>" target=_blank><img src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/Google_Loja_Segura.svg?cccfc=1" height="100" alt="Seu pedido com Segurança" title="Site Seguro"></a>
+          <a href="https://www.google.com/transparencyreport/safebrowsing/diagnostic/?hl=pt-BR#url=<StoreDomain>" target=_blank><img src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/Google_Loja_Segura.svg?cccfc=1" height="70px" alt="Seu pedido com Segurança" title="Site Seguro"></a>
         </div>
          <div class="col-sm-3 text-center">
-          <img src="/images/100_https.svg?cccfc=1" height="100" alt="Seu pedido com Segurança" title="100% HTTPS">
+          <img src="/images/100_https.svg?cccfc=1" height="70px" alt="Seu pedido com Segurança" title="100% HTTPS">
         </div>
      </div>
   </div>
@@ -165,6 +165,7 @@
 <script>
 function MostraChatLoja(){popup=window.open("http://www.rumo.com.br/sistema/ChatLogin.asp?IDLoja=<IDLoja>","Chat","top=20,left=20,height=280,width=390,scrollbars=no,resizable=yes");popup.focus();return void(0);}</script>
 <!-- Chat -->
+
 
 
 
